--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@ html { scrollbar-width: thin; scrollbar-color: rgba(17,17,17,.25) transparent; }
   </div>
 
   <nav class="subtle-nav" id="globalHeroNav" aria-label="Primary">
-    <button class="nav-btn" type="button" data-target="writings">Writings</button>
-    <button class="nav-btn" type="button" data-target="instruments">Instruments</button>
+    <a class="nav-btn" herf="/writings/">Writings</a>
+    <a class="nav-btn" herf="/instruments/">Instruments</a>
     <button class="nav-btn" type="button" data-target="connect">Connect</button>
   </nav>
 
@@ -768,8 +768,8 @@ function __elysianHardBrake(ms = 1400){
       const nav = document.getElementById('globalHeroNav');
       if (!nav) return;
 
-      const WRITINGS_URL    = './writings.html';
-      const INSTRUMENTS_URL = './instruments.html';
+      const WRITINGS_URL    = '/writings/';
+      const INSTRUMENTS_URL = '/instruments/';
 
       nav.addEventListener('click', (e)=>{
         const btn = e.target.closest('.nav-btn');
@@ -1069,6 +1069,7 @@ function __elysianHardBrake(ms = 1400){
   </noscript>
 </body>
 </html>
+
 
 
 
