--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@ html { scrollbar-width: thin; scrollbar-color: rgba(17,17,17,.25) transparent; }
   </div>
 
   <nav class="subtle-nav" id="globalHeroNav" aria-label="Primary">
-    <a class="nav-btn" herf="/writings/">Writings</a>
-    <a class="nav-btn" herf="/instruments/">Instruments</a>
+    <a class="nav-btn" href="/writings/">Writings</a>
+    <a class="nav-btn" href="/instruments/">Instruments</a>
     <button class="nav-btn" type="button" data-target="connect">Connect</button>
   </nav>
 
@@ -823,8 +823,8 @@ function __elysianHardBrake(ms = 1400){
 
     /* ===== INLINE-CTA WIRES from S6 (index-only) ===== */
     (function(){
-      const WRITINGS_URL    = './writings.html';
-      const INSTRUMENTS_URL = './instruments.html';
+      const WRITINGS_URL    = '/writings/';
+      const INSTRUMENTS_URL = '/instruments/';
 
       const frame = document.getElementById('frame-trust');
       if (!frame) return;
@@ -1069,6 +1069,7 @@ function __elysianHardBrake(ms = 1400){
   </noscript>
 </body>
 </html>
+
 
 
 
