--- a/writings/index.html
+++ b/writings/index.html
@@ -7,12 +7,11 @@
   <title>Elysian — Under Maintenance</title>
 
   <style>
-    /* ---------- Local fonts (root-relative so they work in /, /writings/, /instruments/) ---------- */
-    @font-face { font-family:'HelloParisLight'; src:url('/fonts/helloparisserif-light.ttf') format('truetype'); font-weight:400; font-style:normal; font-display:swap; }
-    @font-face { font-family:'Arsenica';       src:url('/fonts/ArsenicaTrial-Regular.otf') format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
-    @font-face { font-family:'cotoris';        src:url('/fonts/cotoris.otf')               format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
-    @font-face { font-family:'cotorisi';       src:url('/fonts/cotorisita.otf')            format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
-
+    @font-face { font-family:'HelloParisLight'; src:url('./Fonts/helloparisserif-light.ttf') format('truetype'); font-weight:400; font-style:normal; font-display:swap; }
+    @font-face { font-family:'Arsenica';       src:url('./Fonts/ArsenicaTrial-Regular.ttf') format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
+    @font-face { font-family:'Canela';         src:url('./Fonts/Canela-Bold.otf')           format('opentype'); font-weight:700; font-style:normal; font-display:swap; }
+    @font-face { font-family:'cotoris';        src:url('./Fonts/cotoris.otf')               format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
+    @font-face { font-family:'cotorisi';       src:url('./Fonts/cotorisita.otf')            format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
     :root{
       /* Palette */
       --bg:#0a0a0a; --fg:#f7f7f5; --muted:#c9c9c3; --line:#2a2a2a;
