--- a/writings/index.html
+++ b/writings/index.html
@@ -20,14 +20,14 @@
       /* Font control */
       --font-body:   "cotorisi","cotoris", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, sans-serif;
       --font-heading:"HelloParisLight", ui-serif, Georgia, "Times New Roman", serif;
-      --font-lead:   "Arsenica", var(--font-body);
+      --font-lead:   "cotoris", var(--font-body);
       --font-tagline:"Arsenica", var(--font-body);
       --font-ui:     "cotorisi", var(--font-body);
       --font-button: "Arsenica", var(--font-ui);
       --font-legal:  "cotorisi", var(--font-body);
 
       /* Layout scale (smaller for luxe feel) */
-      --maxw: 900px;              /* card max width (was 1000px) */
+      --maxw: 1000px;              /* card max width (was 1000px) */
       --radius: 22px;
 
       /* Type scale (tightened) */
