--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html { scrollbar-width: thin; scrollbar-color: rgba(17,17,17,.25) transparent; }
 
   :root{
     --vh:100svh;
-    --page-bg:#ffffff;
+    --page-bg:#fffcf8;
     --ink:#13294B;
     --video-opacity:0.03;
     --video-speed:0.05;
@@ -1081,6 +1081,7 @@ function __elysianHardBrake(ms = 1400){
   </noscript>
 </body>
 </html>
+
 
 
 
