--- a/sections/02.html
+++ b/sections/02.html
@@ -30,7 +30,7 @@
       --notch-gutter: 18;
       --notch-hug-pad: 18;
 
-      --box-fill: #e5ded7;
+      --box-fill: #fff;
       --box-shadow-lg: drop-shadow(0 22px 56px rgba(0,0,0,.08));
       --box-shadow-sm: drop-shadow(0 2px 8px rgba(0,0,0,.05));
       --lux-curve: cubic-bezier(0.25, 1, 0.5, 1);
@@ -652,6 +652,7 @@ if (metrics.radius != null && isFinite(metrics.radius)) {
     })();
   </script>
 </section>
+
 
 
 
